--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{border:0;font-size:100%;font:inherit;margin:0;padding:0;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}table{border-collapse:collapse;border-spacing:0}img{max-width:100%}</style>
 <link rel="stylesheet" href="/testR/_nuxt/entry.CT7GDDKO.css">
-<link rel="modulepreload" as="script" crossorigin href="/testR/_nuxt/BcScjow9.js">
-<link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/C9clf1hn.js">
-<link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/CC-84Chi.js">
-<link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/Bh8p6dQN.js">
-<script type="module" src="/testR/_nuxt/BcScjow9.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1727149386851,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testR",buildId:"5b76f998-96e1-4881-9f68-36a85ded02ac",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="modulepreload" as="script" crossorigin href="/testR/_nuxt/CjxOB_ZU.js">
+<link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/D6yNBNv1.js">
+<link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/CbWNkV8r.js">
+<link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/1Ky8Mdbm.js">
+<script type="module" src="/testR/_nuxt/CjxOB_ZU.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1727160920049,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testR",buildId:"cb18631b-4a79-4f34-b1c4-1d8438313435",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
