--- a/200.html
+++ b/200.html
@@ -6,5 +6,5 @@
 <link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/D6yNBNv1.js">
 <link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/CbWNkV8r.js">
 <link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/1Ky8Mdbm.js">
-<script type="module" src="/testR/_nuxt/CjxOB_ZU.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1727160920049,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testR",buildId:"cb18631b-4a79-4f34-b1c4-1d8438313435",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/testR/_nuxt/CjxOB_ZU.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1727161350548,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testR/",buildId:"a9fffc23-134f-4e56-851b-b2966a16ee35",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
