--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{border:0;font-size:100%;font:inherit;margin:0;padding:0;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}table{border-collapse:collapse;border-spacing:0}img{max-width:100%}</style>
-<link rel="stylesheet" href="/_nuxt/entry.CT7GDDKO.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?73338d3c-b777-4df0-a784-5fade9a8906d">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CNSeAyMM.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B8u_E0GM.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DRxxcVLq.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/a3dQasYm.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BOxXfOGP.js">
-<script type="module" src="/_nuxt/CNSeAyMM.js" crossorigin></script></head><body><div id="__nuxt"><div><div></div><h1>This is About </h1></div></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?73338d3c-b777-4df0-a784-5fade9a8906d">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1727168883816]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"73338d3c-b777-4df0-a784-5fade9a8906d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="stylesheet" href="/testR/_nuxt/entry.CT7GDDKO.css">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/testR/about/_payload.json?36d7e4db-ee8e-4f7f-8761-d0919178fd3e">
+<link rel="modulepreload" as="script" crossorigin href="/testR/_nuxt/CNSeAyMM.js">
+<link rel="modulepreload" as="script" crossorigin href="/testR/_nuxt/B8u_E0GM.js">
+<link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/DRxxcVLq.js">
+<link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/a3dQasYm.js">
+<link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/BOxXfOGP.js">
+<script type="module" src="/testR/_nuxt/CNSeAyMM.js" crossorigin></script></head><body><div id="__nuxt"><div><div></div><h1>This is About </h1></div></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/testR/about/_payload.json?36d7e4db-ee8e-4f7f-8761-d0919178fd3e">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1727170950229]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testR/",buildId:"36d7e4db-ee8e-4f7f-8761-d0919178fd3e",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
