--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@
 <link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/DRxxcVLq.js">
 <link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/a3dQasYm.js">
 <link rel="prefetch" as="script" crossorigin href="/testR/_nuxt/BOxXfOGP.js">
-<script type="module" src="/testR/_nuxt/CNSeAyMM.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1727170950151,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testR/",buildId:"36d7e4db-ee8e-4f7f-8761-d0919178fd3e",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/testR/_nuxt/CNSeAyMM.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1727171230127,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testR",buildId:"62079553-45c9-41ba-a656-f0ec93ca95f1",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
